OTOT-A2-A3/demo/a2/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: a2
  name: a2
spec:
  selector:
    app: a2
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
