OTOT-A2-A3/demo/a2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: a2
  labels:
    app: a2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  rules:
    - http:
        paths:
          - path: /app/(.*)
            pathType: Prefix
            backend:
              service:
                name: a2
                port:
                  name: http
